--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css(.tmp) styles/main.css -->
+        <link rel="stylesheet" href="bower_components/select2/select2.css">
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
 </head>
@@ -45,11 +46,13 @@
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        <script type="text/javascript" src="bower_components/select2/select2.js"></script>
+        <script type="text/javascript" src="bower_components/angular-ui-select2/src/select2.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/services/main.js"></script>
+        <script src="scripts/services/instrument-service.js"></script>
         <script src="scripts/directives/market-depth.js"></script>
         <!-- endbuild -->
 </body>
