outputting the actual data

--- a/app/scripts/album/album.html
+++ b/app/scripts/album/album.html
@@ -1,1 +1,3 @@
-hey
+<ul>
+	<li ng-repeat="item in items">{{item.data.name}} - {{item.data.instrument}} - {{item.data.bid}} - {{item.data.ask}} {{item.data.hostedPosition}}/{{item.data.privatePosition}} </li>
+</ul>
