--- a/app/scripts/album/album.html
+++ b/app/scripts/album/album.html
@@ -1,3 +1,3 @@
 <ul>
-	<li ng-repeat="item in items">{{item.data.name}} - {{item.data.instrument}} - {{item.data.bid}} - {{item.data.ask}} {{item.data.hostedPosition}}/{{item.data.privatePosition}} </li>
+	<li ng-repeat="item in album.items">{{item.data.name}} - {{item.data.instrument}} - {{item.data.bid}} - {{item.data.ask}} {{item.data.hostedPosition}}/{{item.data.privatePosition}} </li>
 </ul>
