--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
   <body ng-app="tinstreet">
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular.min.js"></script>
+    <!--Non minified versions for development-->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-resource.js"></script>
+    <script type="text/javascript" src="scripts/autocomplete.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
-    <ul ng-controller="albumController as album">
-      <li ng-repeat="row in album.rows">{{row.instrument}} {{row.hostedPosition}}/{{row.privatePosition}} {{row.bid}} {{row.ask}}</li> 
+    <div ng-controller="CollectionController as collection">
+    <form>
+      <!--<autocomplete ng-model="card" data="cards" on-type="getCards"/>-->
+      Printing: <input type="text" ng-model="printing.code" /><br />
+      Quantity: <input type="text" ng-model="printing.quantity" /><br />
+      <input type="submit" ng-click="add(printing)" value="Add" />
+    </form>
+    <ul>
+      <li ng-repeat="item in collection.items">{{item.printing}} {{item.hostedPosition}}/{{item.privatePosition}}</li> 
     </ul>
+    </div>
   </body>
 </head>
