--- a/app/index.html
+++ b/app/index.html
@@ -6,16 +6,25 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-resource.js"></script>
     <script type="text/javascript" src="scripts/autocomplete.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
-    <div ng-controller="CollectionController as collection">
-    <form>
-      <!--<autocomplete ng-model="card" data="cards" on-type="getCards"/>-->
-      Printing: <input type="text" ng-model="printing.code" /><br />
-      Quantity: <input type="text" ng-model="printing.quantity" /><br />
-      <input type="submit" ng-click="add(printing)" value="Add" />
-    </form>
-    <ul>
-      <li ng-repeat="item in collection.items">{{item.printing}} {{item.hostedPosition}}/{{item.privatePosition}}</li> 
-    </ul>
+    <div ng-controller="CollectionController">
+      <form name="collectionForm">
+        <table> 
+          <tr>
+            <td><input type="text" ng-model="printing.code" /></td>
+            <td></td>
+            <td></td>
+            <td><input type="number" ng-model="printing.quantity" /></td>
+            <td><input type="button" ng-click="add()" value="Add" /></td>
+          </tr>
+          <tr ng-repeat="item in items" ng-controller="CollectionItemController">
+            <td>{{item.printing}}</td>
+            <td>{{item.name}}</td>
+            <td>{{item.expansion}}</td>
+            <td><input type="number" name="privatePosition" ng-model="item.privatePosition" ng-blur="updateItem()"/></td>
+            <td><input type="button" value="Delete" ng-disabled="item.pending" ng-click="deleteItem($index)"/></td>
+          </tr>
+        </table>
+      </form>
     </div>
   </body>
 </head>
