--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body ng-app="tinstreet">
-    <!--Non minified versions for development-->
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-resource.js"></script>
-    <script type="text/javascript" src="scripts/autocomplete.js"></script>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <form ng-controller="LoginController">
+      Username: <input type="text" ng-model="user._username" /><br />
+      Password: <input type="password" ng-model="user.password" /><br />
+      <input type="submit" ng-click="login()" value="Login" />
+    </form>
     <div ng-controller="CollectionController">
       <form name="collectionForm">
         <table> 
@@ -26,5 +26,11 @@
         </table>
       </form>
     </div>
+    <!--Non minified versions for development-->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-resource.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-cookies.js"></script>
+    <script type="text/javascript" src="scripts/autocomplete.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </head>
