Edit your collection
Click on one of the attributes, and picka new one.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
   <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
   <script src="bower_components/angucomplete-alt/angucomplete-alt.js"></script>
   <link rel="stylesheet" href="bower_components/angucomplete-alt/angucomplete-alt.css"/>
+  <link href="bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
+  <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="bower_components/angular-cache/dist/angular-cache.js"></script>
+
   <!-- Add New Bower Component JS Above -->
 
 
